# talk-to-data

./: .env.example  README.md  VALIDATION.md  app.py  docker-compose.yml  requirements.txt  setup.sh  start.sh  test_e2e.sh
archive/v2/: MIGRATION.md  app.py  generate_semantic.py  (+1 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  biz_semantic.py  health.py  normalize.py  queries.py  semantic.py  sources.py  tables.py  upload.py
backend/app/core/: config.py  database.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  base.py  query.py  relationship.py  source.py  table.py
backend/app/schemas/: __init__.py  query.py  relationship.py  source.py  table.py
backend/app/services/: biz_semantic.py  context_assembler.py  data_semantic.py  file_parser.py  llm.py  normalizer.py  query_engine.py  sql_validator.py
backend/docs/: API_AUTH.md
backend/tests/: conftest.py  test_context_assembler.py  test_file_parser.py  test_health.py  test_normalizer.py  test_query_engine.py  test_query_flow.py  test_semantic_generation.py  test_sql_validator.py  test_upload.py
config/: chinook.yaml
data/: sample_sales.csv
examples/: sample_ecommerce.csv
frontend/: .gitignore  README.md  next.config.js  package.json  tailwind.config.ts
notebooks/: README.md  talk_to_data.ipynb
talk_to_data/: executor.py  generator.py  introspector.py  semantic.py
(+18 files in other folders)
